# elm-doctest

./: .gitignore  .nvimrc  .travis.yml  CHANGELOG.md  Main.hs  README.md  appveyor.yml  default.nix  elm-doctest.cabal  release.nix  stack.yaml
ci/: build.sh  bundle.sh
example/: elm.json
example/src/: Lib.elm
src/: Main.hs
src/Data/: Interpreter.hs
src/Language/: Elm.hs
src/Language/Elm/: Doc.hs  Make.hs  Repl.hs  Syntax.hs
src/Test/: DocTest.hs
src/Text/: Pretty.hs
travis/: build.sh  release.sh
