name: elm-doctest
version: 0.1.0.0
synopsis: Doctest runner for Elm
license: MIT
license-file: LICENSE
author: Jordan Mackie
maintainer: jmackie@protonmail.com
copyright: Copyright (C) 2018 Jordan Mackie
homepage: https://github.com/jmackie/elm-doctest/
bug-reports: https://github.com/jmackie/elm-doctest/issues
build-type: Simple
extra-doc-files: README.md
cabal-version: >=1.10

flag release
    description: Enable optimisations
    default: False

executable elm-doctest
    main-is:
        Main.hs
    build-depends:
        base >=4.11 && <4.12
      , aeson >= 1.3.1 && < 1.4
      , attoparsec >= 0.13.2 && < 0.14
      , text >= 1.2.3 && < 1.3
      , cmdargs >= 0.10.20 && < 0.11
      , process >= 1.6.3 && < 1.7
      , ansi-terminal
    ghc-options:
        -Weverything
        -fno-warn-missing-import-lists
        -fno-warn-safe
        -fno-warn-unsafe
        -fno-warn-all-missed-specialisations
    if flag(release)
        ghc-options:
            -O
            -threaded
            -rtsopts
            -with-rtsopts=-N
    default-language:
        Haskell2010
    default-extensions:
        NoImplicitPrelude
