name: elm-doctest
version: 0.1.0
synopsis: Doctest runner for Elm
license: MIT
license-file: LICENSE
author: Jordan Mackie
maintainer: jmackie@protonmail.com
copyright: Copyright (C) 2018 Jordan Mackie
homepage: https://github.com/jmackie/elm-doctest/
bug-reports: https://github.com/jmackie/elm-doctest/issues
build-type: Simple
extra-doc-files: README.md
cabal-version: >=1.10

flag release
    description: Enable optimisations
    default: False

executable elm-doctest
    hs-source-dirs:
        src
    main-is:
        Main.hs
    other-modules:
        Data.Interpreter
        Language.Elm.Doc
        Language.Elm.Make
        Language.Elm.Repl
        Language.Elm.Syntax
        Language.Elm
        Test.DocTest
        Text.Pretty
    build-depends:
        base >=4.11 && <4.12
      , aeson
      , ansi-terminal
      , attoparsec
      , bytestring
      , directory
      , filepath
      , process
      , text
    ghc-options:
        -Weverything
        -fno-warn-missing-import-lists
        -fno-warn-safe
        -fno-warn-unsafe
        -fno-warn-all-missed-specialisations
    if flag(release)
        ghc-options:
            -O
            -threaded
            -rtsopts
            -with-rtsopts=-N
    default-language:
        Haskell2010
    default-extensions:
        NoImplicitPrelude
